Fix layout issue on mobile

--- a/themes/vimways/assets/sass/_layout.scss
+++ b/themes/vimways/assets/sass/_layout.scss
@@ -382,7 +382,7 @@ article {
 			height: 17rem;
 		}
 		@media only screen and (max-width: 767px) {
-			height: 12rem;
+			height: auto;
 		}
 		.author {
 			font-size: 0.8em;
